# DisplayLight

./: .gitignore  README.md  my_config.txt  windows.sh
control/: CMakeLists.txt  CMakeSettings.json  __init__.py  analyzer.cpp  analyzer.h  analyzer_test.cpp  backed_screen.cpp  backed_screen.h  box.h  config.cpp  config.h  image.cpp  image.h  imageWin.cpp  imageWin.h  imageX11.cpp  imageX11.h  interface.py  lights.cpp  lights.h  main.cpp  message.py  pixelsniff.cpp  pixelsniff.h  pixelsniffWin.cpp  pixelsniffWin.h  pixelsniffX11.cpp  pixelsniffX11.h  platform.cpp  platform.h  screen_analyzer.cpp  screen_analyzer.h  snifftest.cpp  snifftestWin.cpp  snifftestX11.cpp  timing.h
firmware/: Makefile  main.ino  messages.h
